--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 
 <body>
     <main>
-        <section>
+        <section id="login">
             <div id="imagem">
-
+                <!--A imagem vai ser carregada no css-->
             </div>
             <div id="formulario">
                 <h1>Login</h1>
@@ -20,16 +21,22 @@
                     ambiente</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
-                        <input type="email" name="login" id="ilogin" placeholder="seu e-mail" maxlength="30" required>
+                        <span class="material-symbols-outlined">
+                            person
+                            </span>
+                        <input type="email" name="login" id="ilogin" placeholder="seu e-mail" maxlength="30" required autocomplete="email">
                         <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">
+                        <span class="material-symbols-outlined">key</span>
                         <input type="password" name="senha" id="isenha" placeholder="sua senha" minlength="8"
                             maxlength="20" autocomplete="current-password" required>
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html" class="botao">"Esqueci a senha"</a>
+                    <a href="esqueci.html" class="botao">
+                        <span class="material-symbols-outlined">mail</span>
+                        "Esqueci a senha"</a>
                 </form>
             </div>
         </section>
