--- a/index.html
+++ b/index.html
@@ -22,22 +22,20 @@
                     ambiente</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
-                        <span class="material-symbols-outlined">
-                            person
-                            </span>
+                        <label for="ilogin">
+                            <span class="material-symbols-outlined">person</span>
+                        </label>
                         <input type="email" name="login" id="ilogin" placeholder="seu e-mail" maxlength="30" required autocomplete="email">
-                        <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">
-                        <span class="material-symbols-outlined">key</span>
+                        <label for="isenha">
+                            <span class="material-symbols-outlined">key</span>
+                        </label>
                         <input type="password" name="senha" id="isenha" placeholder="sua senha" minlength="8"
                             maxlength="20" autocomplete="current-password" required>
-                        <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html" class="botao">
-                        <span class="material-symbols-outlined">mail</span>
-                        "Esqueci a senha"</a>
+                    <a href="esqueci.html" class="botao">"Esqueci a senha"<span class="material-symbols-outlined">mail</span></a>
                 </form>
             </div>
         </section>
